navbar align fix + routing

--- a/src/app/customer/customer-navbar/customer-navbar.component.scss
+++ b/src/app/customer/customer-navbar/customer-navbar.component.scss
@@ -24,6 +24,13 @@
   display: inline-block;
 }
 
-.ba-dropdown-menu {
+.dropdown-menu {
+  font-family: "Segoe UI", serif;
   position: absolute;
+  right: 0;
+}
+
+.dropdown-item {
+  text-align: center;
+  font-family:  "Segoe UI", serif;
 }
